test: fix test info

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ deps =
 
 [testenv]
 commands = 
-    coverage run -m pytest {posargs:}
+    coverage run -m pytest {posargs}
 
 deps = 
     {[base]deps}
