test: test application

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,8 @@ envlist = py36, coverage-report
 [base]
 deps = 
     pytest > 2.10
+    aiohttp
     coverage
-    pytest-env
     pytest-xprocess
     requests
     
